2008-02-08  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Jens Granseuer

	* gnome-mouse-properties.c: (create_dialog): set up the proper
	scale widgets to GtkSizeGroup in both tabs
	* gnome-mouse-properties.glade: fix HIG compliance for spacing,
	borders, padding, alignment and sentence label (bug #510147,
	comment 23)

2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Luca Ferretti <elle.uca@libero.it>

	* gnome-mouse-accessibility.c: (populate_gesture_combo): fix HIG
	compliance and add some comments for translators (bug #510136)

2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* mouse-left.png:
	* mouse-right.png: remove obsolete icons

2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-mouse-properties.c: (delay_value_changed_cb), (setup_dialog):
	remove left-over callback that was causing the capplet to set a label
	on a NULL widget (bug #510425)

2008-01-14  Denis Washington  <denisw@svn.gnome.org>

	* gnome-mouse-properties.glade:
	Add translation context to some labels. (Bug #509417)

2008-01-14  Denis Washington  <denisw@svn.gnome.org>

	Integrate mousetweaks settings into the mouse capplet. (Bug #503547)

	* gnome-mouse-properties.glade:
	Merge the previous "Buttons" and "Motion" tabs into one, and add a new
	"Accessibility" tab with the mousetweaks preferences. Additionally, re-add
	the "Locate Pointer" preference which disappeared in 2.20. (Bug #480457)

	* gnome-mouse-properties.c:
	Call setup function for the a11y tab, update for a small UI change regarding
	handness preferences, and implement the locate-pointer checkbox.

	* gnome-mouse-accessibility.[ch]:
	Added.

	* Makefile.am:
	Add gnome-mouse-accessibility.c.

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-mouse-properties.glade: don't mark padding string as
	translatable (bug #502087)

2007-07-27  Denis Washington  <denisw@svn.gnome.org>

	* Makefile.am:
	Don't try to install mouse-cursor-*.png as these files are not in mouse/
	anymore.
