@@ -1,3 +1,8 @@
+2008-02-29  Denis Washington  <denisw@svn.gnome.org>
+
+	* gnome-mouse-properties.c: make the mouse orientation radio
+	buttons usable with both mouse buttons.
+
 2008-02-08  Luca Ferretti  <elle.uca@libero.it>
 
 	reviewed by: Jens Granseuer
